--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "name":"@omiu/component",
+  "name": "@omiu/component",
   "version": "0.0.0",
+  "docsExtend": {
+    "cnName": "组件",
+    "cnDescription": "组件",
+    "codepen": "codepenID",
+    "codepenHeight": 351,
+    "codepenDefaultTab": "html,result"
+  },
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "vite",
     "build": "tsc && vite build --base=./",
-    "serve": "vite preview",
+    "docs": "node ./docs-gen.js",
     "test": "web-test-runner \"test/*.test.js\" --node-resolve",
     "test:watch": "web-test-runner \"test/*.test.js\" --node-resolve --watch"
   },
@@ -12,22 +30,14 @@
   "bugs": {
     "url": "https://github.com/Tencent/omi/issues"
   },
-  "files": ["dist"],
-  "main": "./dist/my-lib.umd.js",
-  "module": "./dist/my-lib.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/my-lib.es.js",
-      "require": "./dist/my-lib.umd.js"
-    }
-  },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4",
     "@open-wc/testing": "^2.5.33",
     "@web/test-runner": "^0.13.13",
-    "less": "^4.1.1",
+    "sass": "^1.35.2",
     "typescript": "^4.3.2",
-    "vite": "^2.3.7"
+    "vite": "^2.3.7",
+    "vite-plugin-banner": "^0.1.3"
   },
   "dependencies": {
     "@omiu/common": "^0.0.9",
