--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "codepenDefaultTab": "html,result"
   },
   "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
+  "module": "./dist/index.esm.js",
   "types": "src/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
+      "import": "./dist/index.esm.js",
       "require": "./dist/index.umd.js"
     }
   },
